# hello-auth-python

./: README.md  requirements.txt  setup.py
.github/workflow/: publish.yml
examples/app/: app.py
examples/client/: agent.py  requirements.txt
examples/crewai-agent/: agent.py  requirements.txt
examples/personal-assistant-agent/: pyproject.toml  requirements.txt
examples/personal-assistant-agent/src/personal_assistant_flow/: main.py
examples/personal-assistant-agent/src/personal_assistant_flow/crews/email_filter_crew/: email_filter_crew.py
examples/service/: requirements.txt  server.py  service.py
hello_message/: hello.py
tests/: test_hello.py
tools/: hello-check-email.py
