[project]
name = "personal_assistant_flow"
version = "0.1.0"
description = "personal_assistant_flow using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]==0.85.0",
    "asyncio",
    "langchain-tools>=0.1.34",
    "crewai-tools>=0.12.0",
    "google-auth-oauthlib>=1.2.1",
    "google-api-python-client>=2.145.0",
    "hello-message-sdk",
    "requests"
]

[project.scripts]
kickoff = "personal_assistant_flow.main:kickoff"
plot = "personal_assistant_flow.main:plot"

[tool.hatch.build.targets.wheel]
packages = ["src/personal_assistant_flow"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"